--- a/package.json
+++ b/package.json
@@ -1,32 +1,18 @@
 {
-  "name": "portfolio",
-  "version": "1.0.0",
-  "description": "Leonardo portfolio",
-  "main": "index.js",
+  "name": "portfolio-src",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "webpack": "webpack --watch",
-    "build": "webpack --config production.config.js",
-    "dev": "webpack-dev-server --open"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
-  "author": "Leonardo",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-react": "^7.12.5",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "babel-loader": "^8.2.1",
-    "file-loader": "^6.2.0",
-    "html-loader": "^1.3.2",
-    "html-webpack-plugin": "^4.5.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "svg-url-loader": "^6.0.0",
-    "webpack": "^5.4.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "emailjs-com": "^2.6.4"
+  "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "next": "10.0.5",
+    "react": "17.0.1",
+    "react-dom": "17.0.1"
   }
 }
