--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@types/material-ui": "^0.21.8",
+    "@types/nodemailer": "^6.4.0",
     "@types/styled-components": "^5.1.7",
-    "emailjs-com": "^2.6.4",
     "next": "10.0.5",
+    "nodemailer": "^6.5.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "styled-components": "^5.2.1"
