--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@types/material-ui": "^0.21.8",
     "@types/nodemailer": "^6.4.0",
     "@types/styled-components": "^5.1.7",
-    "next": "10.0.5",
+    "next": "^11.1.0",
     "nodemailer": "^6.5.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -36,6 +36,6 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.2.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.4.2"
   }
 }
