--- a/package.json
+++ b/package.json
@@ -9,17 +9,10 @@
   },
   "dependencies": {
     "@loadable/component": "^5.14.1",
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.57",
-    "@types/material-ui": "^0.21.8",
-    "@types/nodemailer": "^6.4.0",
-    "@types/styled-components": "^5.1.7",
     "next": "^11.1.0",
     "nodemailer": "^6.5.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "styled-components": "^5.2.1"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "@types/loadable__component": "^5.13.3",
