--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.2",
     "@loadable/component": "^5.14.1",
     "next": "^11.1.0",
+    "postcss": "^8.4.5",
     "nodemailer": "^6.5.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "tailwindcss": "^3.0.12",
+    "typewriter-effect": "^2.18.2"
   },
   "devDependencies": {
     "@types/loadable__component": "^5.13.3",
