--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.2",
     "@loadable/component": "^5.14.1",
+    "autoprefixer": "^10.4.2",
+    "framer-motion": "^5.6.0",
     "next": "^11.1.0",
-    "postcss": "^8.4.5",
     "nodemailer": "^6.5.0",
+    "postcss": "^8.4.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "tailwindcss": "^3.0.12",
