--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nodemailer": "^6.5.0",
     "postcss": "^8.4.5",
     "react": "^17.0.1",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.1",
     "tailwindcss": "^3.0.12",
     "typewriter-effect": "^2.18.2"
@@ -23,6 +24,7 @@
     "@types/loadable__component": "^5.13.3",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
     "eslint": "^7.24.0",
