--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nodemailer": "^6.5.0",
     "postcss": "^8.4.5",
     "react": "^17.0.1",
+    "react-canvas-confetti": "^1.2.1",
     "react-dom": "^17.0.1",
     "tailwindcss": "^3.0.12",
     "typewriter-effect": "^2.18.2"
