--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.1",
     "react-canvas-confetti": "^1.2.1",
     "react-dom": "^17.0.1",
+    "request-ip": "^2.1.3",
     "tailwindcss": "^3.0.12",
     "typewriter-effect": "^2.18.2"
   },
@@ -23,6 +24,7 @@
     "@types/node": "^14.14.22",
     "@types/nodemailer": "^6.4.4",
     "@types/react": "^17.0.0",
+    "@types/request-ip": "^0.0.37",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
     "eslint": "^7.24.0",
