--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.2",
     "framer-motion": "^5.6.0",
+    "geoip-lite": "^1.4.3",
     "next": "^11.1.0",
     "nodemailer": "^6.5.0",
     "postcss": "^8.4.5",
@@ -21,6 +22,7 @@
     "typewriter-effect": "^2.18.2"
   },
   "devDependencies": {
+    "@types/geoip-lite": "^1.4.1",
     "@types/node": "^14.14.22",
     "@types/nodemailer": "^6.4.4",
     "@types/react": "^17.0.0",
