--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.1",
     "react-canvas-confetti": "^1.2.1",
     "react-dom": "^17.0.1",
+    "react-parallax-tilt": "^1.7.37",
     "request-ip": "^2.1.3",
     "tailwindcss": "^3.0.12",
     "typewriter-effect": "^2.18.2"
