--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "postcss": "^8.4.5",
     "react": "^17.0.1",
     "react-canvas-confetti": "^1.2.1",
+    "react-device-frameset": "^1.3.2",
     "react-dom": "^17.0.1",
     "react-parallax-tilt": "^1.7.37",
     "request-ip": "^2.1.3",
